<resources>
    <string name="app_name">Ticco</string>

    <!-- OnBoarding -->
    <string name="onboarding_message_one">영화, 전시회, 뮤지컬 등\n기록하고싶은 티켓이 있나요?</string>
    <string name="onboarding_message_two">사진과 글로 나만의 티켓을\n기록할 수 있어요.</string>
    <string name="onboarding_message_three">나만의 기억을 더욱 의미있게.\n티켓 커스텀, 티코와 함께해요</string>
    <string name="onboarding_image_one">onboarding_image_one</string>
    <string name="onboarding_image_two">onboarding_image_two</string>
    <string name="onboarding_image_three">onboarding_image_three</string>
    <string name="onboarding_btn_kakao_login">onboarding_btn_kakao_login</string>

    <!-- Join -->
    <string name="join_back">join_back</string>
    <string name="join_title">프로필을 완성해주세요</string>
    <string name="join_sub_title">나를 표현하는 프로필 사진과 닉네임을 설정해주세요</string>
    <string name="join_profile">join_profile</string>
    <string name="join_camera">join_camera</string>
    <string name="join_nickname_hint">닉네임을 6자 이내로 입력해주세요</string>
    <string name="join_btn_start">시작하기</string>

    <!-- Home -->
    <string name="home_all">전체</string>
    <string name="home_sort_latest">최신순</string>
    <string name="home_ticket">티켓 만들기</string>
    <string name="home_empty">티코가 처음이시군요!\n최근에 즐긴 문화생활이 있다면\n티코에서 나만의 티켓을 만들어봐요!</string>
    <string name="home_sort">정렬</string>
    <string name="home_latest">최신순</string>
    <string name="home_past">과거순</string>
    <string name="home_high_score">별점 높은순</string>
    <string name="home_low_score">별점 낮은순</string>
    <string name="home_close">닫기</string>
    <string name="home_selected">선택 완료</string>
    <string name="home_musical">뮤지컬</string>
    <string name="home_theater">연극</string>
    <string name="home_movie">영화</string>
    <string name="home_exhibition">전시회</string>
    <string name="home_concert">콘서트</string>
    <string name="home_festival">페스티벌</string>
    <string name="home_musical_en">MUSICAL</string>
    <string name="home_theater_en">THEATER</string>
    <string name="home_movie_en">MOVIE</string>
    <string name="home_exhibition_en">EXHIBITION</string>
    <string name="home_concert_en">CONCERT</string>
    <string name="home_festival_en">FESTIVAL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="existing_user_comment">로그인이 완료되었어요\n다시 한 번 돌아온걸 환영해요!</string>
    <string name="permission_gallery">gallery</string>
    <string name="permission_camera">camera</string>
    <string name="permission_sub_title">꼭 필요한 권한만 받아요</string>
    <string name="permission_title">더욱 편리한 티코 이용을 위해\n접근 권한을 허용해주세요</string>
    <string name="permission_camera_text">카메라 (선택)</string>
    <string name="permission_camera_sub_text">티켓 등록을 위한 촬영을 위해 이용</string>
    <string name="permission_gallery_text">사진 (선택)</string>
    <string name="permission_gallery_sub_text">티켓 등록을 위한 촬영, 티켓 이미지 저장을 위해 이용</string>
    <string name="permission_description">위 접근 권한은 더 나은 서비스를 제공하기 위해 사용됩니다.\n 허용에 동의하지 않으셔도 티코를 이용할 수 있으며\n 접근 권한 미동의 시, 일부 기능이 제한될 수 있습니다</string>
    <string name="permission_btn_text">확인</string>

    <!-- MyPage -->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_edit">내 정보 수정하기</string>
    <string name="mypage_nickname">닉네임</string>
    <string name="mypage_save">저장하기</string>
    <string name="mypage_no_change">변경사항이 없어요</string>
    <string name="mypage_problem">문제가 생기셨나요?\n빠르게 해결해드릴게요</string>
    <string name="mypage_problem_time">운영시간 : 평일 10:00 - 18:00\n주말 및 공휴일은 휴무입니다.</string>
    <string name="mypage_inquire">1 :1 채팅 문의 시작하기</string>
    <string name="mypage_service">고객센터</string>
    <string name="mypage_tos">서비스 이용약관</string>
    <string name="mypage_version_title">버전정보</string>
    <string name="mypage_confirm">확인</string>
    <string name="mypage_version_description">현재 최신버전 사용 중입니다</string>
    <string name="mypage_version">최신버전 1.1</string>

    <!-- Dialog -->
    <string name="dialog_cancel">취소</string>
    <string name="dialog_select">설정</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_delete_title">티켓을 삭제하시겠어요?</string>
    <string name="dialog_delete_description">삭제된 티켓은 다시 복구되지 않으니\n신중하게 결정해주세요!</string>
    <string name="dialog_permission_title">사진 권한 설정</string>
    <string name="dialog_permission_description">이미지를 저장하기 위해선\n사진 접근 권한이 필요해요</string>

    <!-- SnackBar -->
    <string name="snackbar_title">이미지 저장이 완료되었어요</string>

</resources>