<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left_mono"
        android:background="@android:color/transparent"
        android:contentDescription="@string/join_back"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_join_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="22dp"
        android:text="@string/join_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_join_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/ticco_midgrey2"
        android:text="@string/join_sub_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_join_title"
        app:layout_constraintStart_toStartOf="@+id/tv_join_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_join_sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_circle"
            android:background="@android:color/transparent"
            android:contentDescription="@string/join_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_circle"
            android:contentDescription="@string/join_camera"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_profile"
            app:layout_constraintEnd_toEndOf="@+id/btn_profile"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/join_nickname_hint"
        android:textColorHint="@color/ticco_midgrey"
        android:backgroundTint="@color/ticco_midgrey"

        app:layout_constraintTop_toBottomOf="@+id/layout_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_large_midgrey"
        android:layout_marginBottom="20dp"
        android:text="@string/join_btn_start"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>