<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.mypage.MyPageVersionFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_mono"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_version_title"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="138dp"
            android:src="@drawable/ic_check_circle_mono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <TextView
            android:id="@+id/tv_version_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_version_description"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/iv_check"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="@id/iv_check"
            app:layout_constraintEnd_toEndOf="@id/iv_check"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_version"
            android:textColor="@color/ticco_midgrey2"
            android:textSize="16dp"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/tv_version_description"
            app:layout_constraintStart_toStartOf="@id/tv_version_description"
            app:layout_constraintEnd_toEndOf="@id/tv_version_description"
            android:layout_marginTop="70dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="22dp"
            android:background="@drawable/bg_rectangle_12_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/mypage_confirm"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>