<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.mypage.MyPageServiceFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_mono"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_service"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"/>

        <ImageView
            android:id="@+id/iv_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_problem"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_problem"
            app:layout_constraintTop_toBottomOf="@id/iv_problem"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/iv_problem"
            app:layout_constraintEnd_toEndOf="@id/iv_problem"/>

        <TextView
            android:id="@+id/tv_problem_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_problem_time"
            app:layout_constraintTop_toBottomOf="@id/tv_problem"
            android:layout_marginTop="40dp"
            android:textColor="@color/ticco_midgrey2"
            android:textSize="16dp"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/tv_problem"
            app:layout_constraintEnd_toEndOf="@id/tv_problem"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_inquire"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_semibold"
            android:textSize="16dp"
            android:includeFontPadding="false"
            android:layout_marginHorizontal="22dp"
            android:background="@drawable/bg_rectangle_r12_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/mypage_inquire"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>