<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="org.android.ticco.presentation.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="39dp"
            android:layout_marginStart="22dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            android:layout_marginEnd="22dp"/>

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_all"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            android:layout_marginTop="22dp"/>

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_bottom"
            app:layout_constraintStart_toEndOf="@id/tv_all"
            app:layout_constraintTop_toTopOf="@id/tv_all"/>

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_sort_latest"
            app:layout_constraintStart_toEndOf="@id/iv_category"
            android:layout_marginStart="22dp"
            app:layout_constraintTop_toTopOf="@id/tv_all"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_bottom"
            app:layout_constraintStart_toEndOf="@id/tv_sort"
            app:layout_constraintTop_toTopOf="@+id/tv_sort"/>

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_welcome"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_sort"
            android:layout_marginTop="95dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_empty"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/iv_empty"
            app:layout_constraintStart_toStartOf="@id/iv_empty"
            app:layout_constraintEnd_toEndOf="@id/iv_empty"
            app:textAlignment="center"
            android:layout_marginTop="36dp"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_ticket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="24dp"
            app:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sort" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ticket"
            android:layout_width="173dp"
            android:layout_height="55dp"
            android:text="@string/home_ticket"
            android:background="@drawable/bg_rectangle_12_black"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>