<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="org.android.ticco.presentation.mypage.MyPageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.mypage.MyPageFragment">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_mono"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_title"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:profileImgUri="@{vm.profileImgUri}"
            android:src="@drawable/ic_profile_circle"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_profile"
            android:layout_marginTop="12dp"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            android:layout_marginStart="16dp"
            tools:text="asdfafd님"
            android:text="@{vm.nickname+`님`}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_edit"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:textColor="@color/ticco_midgrey2"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
            app:layout_constraintStart_toStartOf="@id/tv_nickname"/>

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_righ_midgrey_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            android:layout_marginEnd="22dp"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintEnd_toEndOf="@id/iv_more"
            android:background="@color/ticco_midgrey"
            android:layout_marginTop="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_service"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginTop="24dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            android:background="@drawable/bg_rectangle_r12_pink"
            android:text="@string/mypage_service"/>

        <TextView
            android:id="@+id/tv_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:textColor="@color/ticco_midgrey2"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_service"
            android:text="@string/mypage_tos"
            app:layout_constraintStart_toStartOf="@id/btn_service"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/iv_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_righ_midgrey_2"
            app:layout_constraintEnd_toEndOf="@id/btn_service"
            app:layout_constraintTop_toTopOf="@id/tv_tos"
            app:layout_constraintBottom_toBottomOf="@id/tv_tos"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:textColor="@color/ticco_midgrey2"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_tos"
            android:text="@string/mypage_version_title"
            app:layout_constraintStart_toStartOf="@id/tv_tos"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/iv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_righ_midgrey_2"
            app:layout_constraintEnd_toEndOf="@id/btn_service"
            app:layout_constraintTop_toTopOf="@id/tv_version"
            app:layout_constraintBottom_toBottomOf="@id/tv_version"/>







    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>